some updates and add some schedule for a better understood

--- a/IntroTensorFlow.ipynb
+++ b/IntroTensorFlow.ipynb
@@ -16,6 +16,7 @@
     "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
     "<font size = 5><strong>Nesse notebook iremos fazer uma revisão em conceitos básicos de TensorFlow, aprender suas estruturas e ver com elas a motivação para usa-las:</strong></font><br>\n",
     "<br>\n",
+    "<p><a href=\"#ref1\">Instalando TensorFlow</a></p>    \n",
     "<p><a href=\"#ref2\">Como funciona o TensorFlow?</a></p>\n",
     "<p><a href=\"#ref3\">Construindo um grafo</a></p>\n",
     "<p><a href=\"#ref4\"> Definindo vetores multidimensionais usando o TensorFlow</a></p>\n",
@@ -27,9 +28,38 @@
     "</div>\n",
     "<br>\n",
     "\n",
-    "----------------\n",
+    "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"ref1\"></a>\n",
+    "# Instalando TensorFlow\n",
+    "\n",
+    "<h2> No Ubuntu</h2>\n",
+    "    <p>Com o pip já instalado basta usar esse comando no terminal: <strong>sudo pip/pip3 install tensorflow</strong></p>\n",
+    "<h2> No Windows</h2>\n",
+    "    <p>Recomendo baixar o Anaconda versão 5.20 para o python 3.6 nesse link: <a href=\"https://repo.anaconda.com/archive/\"> https://repo.anaconda.com/archive/</a> </p> \n",
+    "<h2> No Mac </h2>\n",
+    "    <p>Viste o seguinte endereço: <a href=\"https://www.tensorflow.org/install/source\">https://www.tensorflow.org/install/source</a></p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------------"
    ]
   },
   {
@@ -57,17 +87,6 @@
    "metadata": {},
    "source": [
     "------------------------------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Instalando TensorFlow\n",
-    "<h1> No Ubuntu</h1>\n",
-    "    <p>Com o pip já instalado basta usar esse comando no terminal: <strong>sudo pip/pip3 install tensorflow</strong></p>\n",
-    "<h1> No Windows</h1>\n",
-    "    <p>Recomendo baixar o Anaconda versão 5.20 para o python 3.6 nesse link: <strong> https://repo.anaconda.com/archive/</strong> </p> "
    ]
   },
   {
@@ -795,9 +814,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este notebook foi desenvolvido graças ao curso de \"Deep Learning with TensorFlow\" da Cognitive Class.\n",
-    "Segue o link do curso original: https://courses.cognitiveclass.ai/courses/course-v1:CognitiveClass+ML0120ENv2+2018/info"
+    "# Agradecimentos e Indicações"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://www.bigdatauniversity.com\"><img src = \"https://ibm.box.com/shared/static/jvcqp2iy2jlx2b32rmzdt0tx8lvxgzkp.png\" width = 300, align = \"center\"></a><br>\n",
+    "<p>Este notebook foi desenvolvido graças ao curso de \"Deep Learning with TensorFlow\" da Cognitive Class.</p>\n",
+    "<p>Segue o link do curso original:<br><a href=\"https://cognitiveclass.ai/courses/deep-learning-tensorflo\"> https://cognitiveclass.ai/courses/deep-learning-tensorfl </a> </p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://www.udemy.com/\"><img src = \"https://www.udemy.com/staticx/udemy/images/v6/default-meta-image.png\" width = 300, align = \"center\"></a><br>\n",
+    "<p>Segue aqui indicações de bons cursos sobre TensorFlow na plataforma paga Udemy</p>\n",
+    "<p>TensorFlow: Machine Learning e Deep Learning com Python:<br><a href=\"https://www.udemy.com/tensorflow-machine-learning-deep-learning-python/\">https://www.udemy.com/tensorflow-machine-learning-deep-learning-python/</a></p>\n",
+    "<p>Complete Guide to TensorFlow for Deep Learning with Python:<br><a href=\"https://www.udemy.com/complete-guide-to-tensorflow-for-deep-learning-with-python/\">https://www.udemy.com/complete-guide-to-tensorflow-for-deep-learning-with-python/</a></p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
