--- a/IntroTensorFlow.ipynb
+++ b/IntroTensorFlow.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "<strong>TensorFlow tem a capacidade de executar seu código em diferentes componetes tanto em CPUs quanto em GPUs isso é uma consequência da sua estrutura específica:</strong>\n",
     "     <p> -> TensorFlow define a computação como grafos, e esse são feito através de operações( também conhecidas como \"ops\"). Então, quando trabalhamos com TensorFlow, é a mesma coisa de termos a definição de uma série de operações em um grafo de execução.</p>\n",
-    "     <p>-> Para executas essas operações como computações, nos devemos lançar nosso grafo em uma sessão. A sessão traduz e passa as operações representadano grafo para o dispositivo que você deseja que execute, seja ele GPU ou CPU</p>\n",
+    "     <p>-> Para executar essas operações como computações, nos devemos lançar nosso grafo em uma sessão. A sessão traduz e passa as operações representando o grafo para o dispositivo que você deseja que execute, seja ele GPU ou CPU</p>\n",
     "     <p>-> Por exemplo, a imagem abaixo representa um grafo em TensorFlow. _W_,_x_ e b são os tensores sobre as bordas do grafo. _MatMul_ é a operação a ser executada sobre os tensores _W_ e _x_, depois de _Add_ é chamada e adicionar o resultado do operador anterior com _b_. Os tensores resultantes de cada operação cruzam com o próximo até o final, onde  é possível obter o resultado desejado.</p> \n"
    ]
   },
@@ -837,11 +837,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "-----------------------------"
+   ]
   }
  ],
  "metadata": {
