--- a/RegressãoLinear/Regressão_Linear.ipynb
+++ b/RegressãoLinear/Regressão_Linear.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -428,6 +435,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -598,6 +612,13 @@
    "metadata": {},
    "source": [
     "<h1 align=center><font size = 8><strong>Exemplo regressão linear multivariada</strong></font></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
    ]
   },
   {
@@ -990,6 +1011,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1131,12 +1159,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://www.tensorflow.org/?hl=pt-br\"><img src = \"https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/TensorFlowLogo.svg/1280px-TensorFlowLogo.svg.png\" width = 200, align = \"center\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,24 +1212,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = X[:,np.newaxis]\n",
     "Y = Y[:,np.newaxis]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# scaler_x = StandardScaler()\n",
-    "# X = scaler_x.fit_transform(X)\n",
-    "# scaler_y = StandardScaler()\n",
-    "# Y = scaler_y.fit_transform(Y)"
    ]
   },
   {
@@ -1206,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,12 +1245,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 0.1\n",
-    "n_epochs = 7000"
+    "learning_rate = 0.00005\n",
+    "n_epochs = 10000"
    ]
   },
   {
@@ -1239,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,46 +1341,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 100 cost = 43.217\n",
+      "Epoch: 200 cost = 42.663338\n",
+      "Epoch: 300 cost = 42.117\n",
+      "Epoch: 400 cost = 41.57784\n",
+      "Epoch: 500 cost = 41.045746\n",
+      "Epoch: 600 cost = 40.520584\n",
+      "Epoch: 700 cost = 40.002243\n",
+      "Epoch: 800 cost = 39.4906\n",
+      "Epoch: 900 cost = 38.985542\n",
+      "Epoch: 1000 cost = 38.486973\n",
+      "Epoch: 1100 cost = 37.99477\n",
+      "Epoch: 1200 cost = 37.508854\n",
+      "Epoch: 1300 cost = 37.029118\n",
+      "Epoch: 1400 cost = 36.555466\n",
+      "Epoch: 1500 cost = 36.08782\n",
+      "Epoch: 1600 cost = 35.626087\n",
+      "Epoch: 1700 cost = 35.17018\n",
+      "Epoch: 1800 cost = 34.72003\n",
+      "Epoch: 1900 cost = 34.275574\n",
+      "Epoch: 2000 cost = 33.836716\n",
+      "Epoch: 2100 cost = 33.403385\n",
+      "Epoch: 2200 cost = 32.97553\n",
+      "Epoch: 2300 cost = 32.55308\n",
+      "Epoch: 2400 cost = 32.135994\n",
+      "Epoch: 2500 cost = 31.724182\n",
+      "Epoch: 2600 cost = 31.317621\n",
+      "Epoch: 2700 cost = 30.916235\n",
+      "Epoch: 2800 cost = 30.519978\n",
+      "Epoch: 2900 cost = 30.12882\n",
+      "Epoch: 3000 cost = 29.7427\n",
+      "Epoch: 3100 cost = 29.361576\n",
+      "Epoch: 3200 cost = 28.985409\n",
+      "Epoch: 3300 cost = 28.614168\n",
+      "Epoch: 3400 cost = 28.247799\n",
+      "Epoch: 3500 cost = 27.886272\n",
+      "Epoch: 3600 cost = 27.529566\n",
+      "Epoch: 3700 cost = 27.177635\n",
+      "Epoch: 3800 cost = 26.830452\n",
+      "Epoch: 3900 cost = 26.48798\n",
+      "Epoch: 4000 cost = 26.15021\n",
+      "Epoch: 4100 cost = 25.817102\n",
+      "Epoch: 4200 cost = 25.488623\n",
+      "Epoch: 4300 cost = 25.164768\n",
+      "Epoch: 4400 cost = 24.8455\n",
+      "Epoch: 4500 cost = 24.530788\n",
+      "Epoch: 4600 cost = 24.220633\n",
+      "Epoch: 4700 cost = 23.914993\n",
+      "Epoch: 4800 cost = 23.613855\n",
+      "Epoch: 4900 cost = 23.31721\n",
+      "Epoch: 5000 cost = 23.025017\n",
+      "Epoch: 5100 cost = 22.737268\n",
+      "Epoch: 5200 cost = 22.453936\n",
+      "Epoch: 5300 cost = 22.175049\n",
+      "Epoch: 5400 cost = 21.90052\n",
+      "Epoch: 5500 cost = 21.630375\n",
+      "Epoch: 5600 cost = 21.3646\n",
+      "Epoch: 5700 cost = 21.10313\n",
+      "Epoch: 5800 cost = 20.846039\n",
+      "Epoch: 5900 cost = 20.59321\n",
+      "Epoch: 6000 cost = 20.344704\n",
+      "Epoch: 6100 cost = 20.100449\n",
+      "Epoch: 6200 cost = 19.860487\n",
+      "Epoch: 6300 cost = 19.624725\n",
+      "Epoch: 6400 cost = 19.39324\n",
+      "Epoch: 6500 cost = 19.165936\n",
+      "Epoch: 6600 cost = 18.942842\n",
+      "Epoch: 6700 cost = 18.723938\n",
+      "Epoch: 6800 cost = 18.509178\n",
+      "Epoch: 6900 cost = 18.29857\n",
+      "Epoch: 7000 cost = 18.092112\n",
+      "Epoch: 7100 cost = 17.88976\n",
+      "Epoch: 7200 cost = 17.691502\n",
+      "Epoch: 7300 cost = 17.497324\n",
+      "Epoch: 7400 cost = 17.30721\n",
+      "Epoch: 7500 cost = 17.121141\n",
+      "Epoch: 7600 cost = 16.939102\n",
+      "Epoch: 7700 cost = 16.761074\n",
+      "Epoch: 7800 cost = 16.587029\n",
+      "Epoch: 7900 cost = 16.416956\n",
+      "Epoch: 8000 cost = 16.250822\n",
+      "Epoch: 8100 cost = 16.088625\n",
+      "Epoch: 8200 cost = 15.930339\n",
+      "Epoch: 8300 cost = 15.775925\n",
+      "Epoch: 8400 cost = 15.62539\n",
+      "Epoch: 8500 cost = 15.478678\n",
+      "Epoch: 8600 cost = 15.3357935\n",
+      "Epoch: 8700 cost = 15.196695\n",
+      "Epoch: 8800 cost = 15.061357\n",
+      "Epoch: 8900 cost = 14.929759\n",
+      "Epoch: 9000 cost = 14.80188\n",
+      "Epoch: 9100 cost = 14.677675\n",
+      "Epoch: 9200 cost = 14.557126\n",
+      "Epoch: 9300 cost = 14.440207\n",
+      "Epoch: 9400 cost = 14.326878\n",
+      "Epoch: 9500 cost = 14.217101\n",
+      "Epoch: 9600 cost = 14.110859\n",
+      "Epoch: 9700 cost = 14.008101\n",
+      "Epoch: 9800 cost = 13.908799\n",
+      "Epoch: 9900 cost = 13.812914\n",
+      "Epoch: 10000 cost = 13.720402\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
     "    for epoch in range(n_epochs):\n",
     "        sess.run(optimizer)\n",
-    "        if (epoch+1) % 100 == 0:\n",
+    "        if (epoch+1) % 1000 == 0:\n",
     "            c = sess.run(loss)\n",
-    "            print(\"Epoch:\", (epoch+1), \"cost =\", c)"
+    "            print(\"Epoch:\", (epoch+1), \"cost =\", c)\n",
+    "    w_final, b_final = sess.run([W,b])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.70387006\n",
+      "-0.2884551\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(w_final)\n",
+    "print(b_final)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3.44747601]\n",
+      " [ 3.49794349]\n",
+      " [ 3.62851139]\n",
+      " [ 4.55593058]\n",
+      " [ 4.27698687]\n",
+      " [ 5.21911694]\n",
+      " [ 8.74079001]\n",
+      " [ 4.32041565]\n",
+      " [14.02896575]\n",
+      " [ 5.92347971]\n",
+      " [ 3.35709909]\n",
+      " [ 4.973959  ]\n",
+      " [ 4.06786708]\n",
+      " [ 3.60232742]\n",
+      " [ 3.44585711]\n",
+      " [ 7.95245554]\n",
+      " [ 6.26471592]\n",
+      " [ 3.65765161]\n",
+      " [ 5.06313934]\n",
+      " [ 3.68186474]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculando y_pred e exibindo\n",
+    "y_pred = (w_final*X_test[:])+b_final\n",
+    "print(y_pred)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.519464928973376\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculando erro quadrado médio e exibindo\n",
+    "mse = np.mean((y_test - y_pred)**2)\n",
+    "print(mse)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1374,8 +1553,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://www.tensorflow.org/?hl=pt-br\"><img src = \"https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/TensorFlowLogo.svg/1280px-TensorFlowLogo.svg.png\" width = 200, align = \"center\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,16 +1698,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 193,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.framework.ops.Tensor"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "y_pred = tf.add(tf.add(tf.multiply(X[:,0],W1),tf.multiply(X[:,1],W2)),b)"
+    "type(X1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.ops.variables.RefVariable"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(W2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "termo1 = tf.multiply(X1,W1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "termo2 = tf.multiply(X2,W2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = tf.add(tf.add(termo1,termo2),b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,83 +1799,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 100 cost = 7.70232\n",
-      "Epoch: 200 cost = 5.229806\n",
-      "Epoch: 300 cost = 3.517899\n",
-      "Epoch: 400 cost = 2.3903694\n",
-      "Epoch: 500 cost = 1.6884335\n",
-      "Epoch: 600 cost = 1.2775326\n",
-      "Epoch: 700 cost = 1.0518274\n",
-      "Epoch: 800 cost = 0.9349201\n",
-      "Epoch: 900 cost = 0.8766163\n",
-      "Epoch: 1000 cost = 0.84706473\n",
-      "Epoch: 1100 cost = 0.8302352\n",
-      "Epoch: 1200 cost = 0.8183667\n",
-      "Epoch: 1300 cost = 0.80807394\n",
-      "Epoch: 1400 cost = 0.7980322\n",
-      "Epoch: 1500 cost = 0.78778213\n",
-      "Epoch: 1600 cost = 0.77719\n",
-      "Epoch: 1700 cost = 0.766233\n",
-      "Epoch: 1800 cost = 0.7549224\n",
-      "Epoch: 1900 cost = 0.7432797\n",
-      "Epoch: 2000 cost = 0.7313299\n",
-      "Epoch: 2100 cost = 0.71910053\n",
-      "Epoch: 2200 cost = 0.7066206\n",
-      "Epoch: 2300 cost = 0.69392115\n",
-      "Epoch: 2400 cost = 0.68103474\n",
-      "Epoch: 2500 cost = 0.667996\n",
-      "Epoch: 2600 cost = 0.6548407\n",
-      "Epoch: 2700 cost = 0.6416063\n",
-      "Epoch: 2800 cost = 0.6283321\n",
-      "Epoch: 2900 cost = 0.61505765\n",
-      "Epoch: 3000 cost = 0.6018241\n",
-      "Epoch: 3100 cost = 0.5886728\n",
-      "Epoch: 3200 cost = 0.57564604\n",
-      "Epoch: 3300 cost = 0.56278574\n",
-      "Epoch: 3400 cost = 0.55013335\n",
-      "Epoch: 3500 cost = 0.53773\n",
-      "Epoch: 3600 cost = 0.5256154\n",
-      "Epoch: 3700 cost = 0.51382816\n",
-      "Epoch: 3800 cost = 0.5024044\n",
-      "Epoch: 3900 cost = 0.49137858\n",
-      "Epoch: 4000 cost = 0.48078173\n",
-      "Epoch: 4100 cost = 0.47064206\n",
-      "Epoch: 4200 cost = 0.46098438\n",
-      "Epoch: 4300 cost = 0.4518297\n",
-      "Epoch: 4400 cost = 0.44319463\n",
-      "Epoch: 4500 cost = 0.43509185\n",
-      "Epoch: 4600 cost = 0.42752942\n",
-      "Epoch: 4700 cost = 0.42051065\n",
-      "Epoch: 4800 cost = 0.41403463\n",
-      "Epoch: 4900 cost = 0.40809578\n",
-      "Epoch: 5000 cost = 0.40268403\n",
-      "Epoch: 5100 cost = 0.39778507\n",
-      "Epoch: 5200 cost = 0.39338103\n",
-      "Epoch: 5300 cost = 0.38945016\n",
-      "Epoch: 5400 cost = 0.38596782\n",
-      "Epoch: 5500 cost = 0.38290665\n",
-      "Epoch: 5600 cost = 0.38023734\n",
-      "Epoch: 5700 cost = 0.377929\n",
-      "Epoch: 5800 cost = 0.3759499\n",
-      "Epoch: 5900 cost = 0.37426773\n",
-      "Epoch: 6000 cost = 0.37285084\n",
-      "Epoch: 6100 cost = 0.37166807\n",
-      "Epoch: 6200 cost = 0.3706896\n",
-      "Epoch: 6300 cost = 0.36988735\n",
-      "Epoch: 6400 cost = 0.3692353\n",
-      "Epoch: 6500 cost = 0.36870962\n",
-      "Epoch: 6600 cost = 0.368289\n",
-      "Epoch: 6700 cost = 0.36795482\n",
-      "Epoch: 6800 cost = 0.36769062\n",
-      "Epoch: 6900 cost = 0.36748263\n",
-      "Epoch: 7000 cost = 0.36731943\n"
+      "Epoch: 1000 cost = 3.1640115\n",
+      "Epoch: 2000 cost = 2.2402487\n",
+      "Epoch: 3000 cost = 1.8899902\n",
+      "Epoch: 4000 cost = 1.4699019\n",
+      "Epoch: 5000 cost = 1.0603544\n",
+      "Epoch: 6000 cost = 0.74622375\n",
+      "Epoch: 7000 cost = 0.5583956\n"
      ]
     }
    ],
@@ -1633,9 +1821,68 @@
     "    sess.run(init)\n",
     "    for epoch in range(n_epochs):\n",
     "        sess.run(optimizer)\n",
-    "        if (epoch+1) % 100 == 0:\n",
+    "        if (epoch+1) % 1000 == 0:\n",
     "            c = sess.run(loss)\n",
-    "            print(\"Epoch:\", (epoch+1), \"cost =\", c)"
+    "            print(\"Epoch:\", (epoch+1), \"cost =\", c)\n",
+    "    w1_final, w2_final, b_final = sess.run([W1, W2, b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1029704\n",
+      "0.36667094\n",
+      "-0.011346149\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(w1_final)\n",
+    "print(w2_final)\n",
+    "print(b_final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.30193406 2.85783112 2.45193803 2.80440377 2.67363507 4.33298727\n",
+      " 2.66260537 3.99216943 3.87476979 2.78062319]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = (w1_final*X_test[:,0])+(w2_final*X_test[:,1])+b_final\n",
+    "print(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.24775723767363894\n"
+     ]
+    }
+   ],
+   "source": [
+    "mse = np.mean((y_test - y_pred)**2)\n",
+    "print(mse)"
    ]
   },
   {
