--- a/Classificação/Regressão_Logística.ipynb
+++ b/Classificação/Regressão_Logística.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "((130, 4), (130,), (20, 4), (20,))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -202,27 +202,13 @@
        "((130, 2), (130, 1), (20, 2), (20, 1))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_train.shape, y_train.shape, x_test.shape, y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.plot(x_train[:,0], x_train[:,1], 'b.')\n",
-    "# plt.plot(x_train[:,0], x_train[:,1], 'r.')\n",
-    "# plt.xlabel('Petal Legth (cm)')\n",
-    "# plt.ylabel('Petal Width (cm)')\n",
-    "# plt.legend(['Versicolor','Not Versicolor'])\n",
-    "# plt.show()"
    ]
   },
   {
@@ -234,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -317,23 +303,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[1.46703259],\n",
-       "        [0.85707639]]), array([[-8.60385796]]))"
+       "(array([[1.5322702 ],\n",
+       "        [0.87011919]]), array([[-8.93272667]]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "W, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = np.matmul(x_test,W)+b"
    ]
   },
   {
@@ -345,16 +340,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_preds = []\n",
-    "for i in logits(Z):\n",
-    "    if i > 0.5:\n",
-    "        y_preds.append(1)\n",
+    "y_preds_adjust = []\n",
+    "for i in range(len(y_pred)):\n",
+    "    if y_pred[i] > 0.5:\n",
+    "        y_preds_adjust.append(1)\n",
     "    else:\n",
-    "        y_preds.append(0)"
+    "        y_preds_adjust.append(0)"
    ]
   },
   {
@@ -366,23 +361,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "96.15384615384616\n"
+      "95.0\n"
      ]
     }
    ],
    "source": [
     "correct = 0 \n",
-    "for i in range(len(y_train)):\n",
-    "    if y_train[i] == y_preds[i]:\n",
+    "for i in range(len(y_test)):\n",
+    "    if y_test[i] == y_preds_adjust[i]:\n",
     "        correct +=1\n",
-    "acc = (correct/float(len(y_train)))*100        \n",
+    "acc = (correct/float(len(y_test)))*100        \n",
     "        \n",
     "print(acc)"
    ]
@@ -698,15 +693,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn import datasets\n",
+    "from sklearn.datasets import load_iris\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
@@ -719,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +786,7 @@
        "((130, 4), (130,), (20, 4), (20,))"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +826,7 @@
        "((130, 2), (130, 1), (20, 2), (20, 1))"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +839,309 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Definindo hiper-parametros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.0005\n",
+    "n_epochs = 3000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resetando grafo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Definindo Grafo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# place_X = tf.constant( X_train, dtype = tf.float32 ,name = \"X\")\n",
+    "# place_y = tf.constant(y_train, dtype = tf.float32,name = \"y\")\n",
+    "# place_X = tf.Variable( X_train, dtype = tf.float32 ,name = \"X\")\n",
+    "# place_y = tf.Variable( y_train, dtype = tf.float32 ,name = \"y\")\n",
+    "place_X = tf.placeholder(tf.float32,[None,2])\n",
+    "place_y = tf.placeholder(tf.float32,[None,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setando Variáveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = tf.Variable(tf.random_normal(shape=[2, 1])) \n",
+    "b = tf.Variable(tf.random_normal(shape=[1,1])) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definindo nossa predição"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = tf.add(tf.matmul(place_X,W), b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(?, 1)\n",
+      "(?, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_pred.shape)\n",
+    "print(place_y.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definindo função de custo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(labels = place_y , logits = y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definindo otimizador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = tf.train.AdamOptimizer(learning_rate).minimize(loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inicializando as variáveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rodando nosso modelo na sessão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Rodando com tf.placeholder\n",
+    "# with tf.Session() as sess:\n",
+    "#     sess.run(init)\n",
+    "#     for epoch in range(n_epochs):\n",
+    "#         for (x,y) in zip(x_train, y_train):\n",
+    "#             sess.run(optimizer, feed_dict={place_X: x, place_y: y})\n",
+    "#         if (epoch+1) % 100 == 0:\n",
+    "#             c = sess.run(loss, feed_dict={place_X: x_train, place_y: y_train})\n",
+    "#             print(\"Epoch:\", (epoch+1), \"cost =\", c)\n",
+    "            \n",
+    "#     w_final, b_final = sess.run([W,b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 100 cost = 1.5277779\n",
+      "Epoch: 200 cost = 1.3918111\n",
+      "Epoch: 300 cost = 1.2596717\n",
+      "Epoch: 400 cost = 1.1327534\n",
+      "Epoch: 500 cost = 1.0128365\n",
+      "Epoch: 600 cost = 0.90203816\n",
+      "Epoch: 700 cost = 0.80261457\n",
+      "Epoch: 800 cost = 0.7165832\n",
+      "Epoch: 900 cost = 0.6452295\n",
+      "Epoch: 1000 cost = 0.5887064\n",
+      "Epoch: 1100 cost = 0.5459372\n",
+      "Epoch: 1200 cost = 0.51489073\n",
+      "Epoch: 1300 cost = 0.4930811\n",
+      "Epoch: 1400 cost = 0.47804984\n",
+      "Epoch: 1500 cost = 0.46768486\n",
+      "Epoch: 1600 cost = 0.46034956\n",
+      "Epoch: 1700 cost = 0.4548738\n",
+      "Epoch: 1800 cost = 0.45047605\n",
+      "Epoch: 1900 cost = 0.44666475\n",
+      "Epoch: 2000 cost = 0.44314834\n",
+      "Epoch: 2100 cost = 0.4397635\n",
+      "Epoch: 2200 cost = 0.4364245\n",
+      "Epoch: 2300 cost = 0.43309024\n",
+      "Epoch: 2400 cost = 0.42974362\n",
+      "Epoch: 2500 cost = 0.4263796\n",
+      "Epoch: 2600 cost = 0.42299935\n",
+      "Epoch: 2700 cost = 0.4196063\n",
+      "Epoch: 2800 cost = 0.41620514\n",
+      "Epoch: 2900 cost = 0.41280067\n",
+      "Epoch: 3000 cost = 0.4093976\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rodando com tf.placeholder\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    for epoch in range(n_epochs):\n",
+    "        sess.run(optimizer, feed_dict={place_X: x_train, place_y: y_train})\n",
+    "        if (epoch+1) % 100 == 0:\n",
+    "            c = sess.run(loss, feed_dict={place_X: x_train, place_y: y_train})\n",
+    "            print(\"Epoch:\", (epoch+1), \"cost =\", c)\n",
+    "            \n",
+    "    w_final, b_final = sess.run([W,b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.28870517]\n",
+      " [ 1.8139768 ]]\n",
+      "[[-1.5162541]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(w_final)\n",
+    "print(b_final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = np.matmul(x_test,w_final)+b_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_preds_adjust = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(y_pred)):\n",
+    "    if y_pred[i] > 0.5:\n",
+    "        y_preds_adjust.append(1)\n",
+    "    else:\n",
+    "        y_preds_adjust.append(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct = 0 \n",
+    "for i in range(len(y_test)):\n",
+    "    if y_test[i] == y_preds_adjust[i]:\n",
+    "        correct +=1\n",
+    "acc = (correct/float(len(y_test)))*100        \n",
+    "        \n",
+    "print(acc)"
    ]
   },
   {
